welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
  var occ:Int=0
  taille=nums.length
  
  for(i<-0 to (taille-1)){
    if (nums(0)==lookingFor){
      occ+=1
    }
  }
  return occ
}